test/fail/lambdas/lambda_bad_token.lily
#[
SyntaxError: Unexpected token 'end of lambda'.
    from lambda_bad_token.lily:6:
]#

var v = (|| )
